# Bitflow2x

./: CMakeLists.txt  Network.cpp  Network.h  NetworkLink.cpp  NetworkLink.h  NetworkNode.cpp  NetworkNode.h  main.cpp
data/: samplenetwork.graphml
source/: CMakeLists.txt  main.cpp
source/foundation/: Memory.h  Types.h  YedFileReader.h
source/model/: Network.cpp  Network.h  NetworkLink.cpp  NetworkLink.h  NetworkNode.cpp  NetworkNode.h  Types.h  yedgraphml.h
